test/classes/initializers/parentCall/inCoforall.good
inCoforall.chpl:4: In initializer:
inCoforall.chpl:7: error: use of super.init() call in a coforall loop body
